# package_test2

./: pyproject.toml  setup.py
src/soros_api/: client.py
