[project]
name = "soros_api"
version = "0.0.1"
authors = [
  { name="Renata Weglarska", email="renata@weglarska.eu" },
]
description = "SOROS API CLient"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/rweglarska/package_test2"
"Bug Tracker" = "https://github.com/rweglarska/package_test2/issues"